<resources>
    <string name="sr_app_name">Smart Receipts</string>
    <string name="sr_app_name_plus">Smart Receipts Plus</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_categories">Categories</string>
    <string name="menu_main_csv">Customize CSV Output</string>
    <string name="menu_main_pdf">Customize PDF Output</string>
    <string name="menu_main_ocr_configuration">Automatic Scans (OCR)</string>
    <string name="menu_main_export">Backup</string>
    <string name="menu_main_usage_guide">Usage Guide</string>
    <string name="add">Add</string>
    <string name="reorder">Reorder</string>
    <string name="column_item">Column %s</string>
    <string name="copy">Copy</string>
    <string name="daily_total">Daily Total: %s</string>
    <string name="day">%s Day</string>
    <string name="days">%s Days</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete %s?</string>
    <string name="delete_sync_information">Any remotely synchronized data for this item will also be deleted.</string>
    <string name="distance">Distance</string>
    <string name="distance_total_item">Dist. Total: %s</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="feedback">%s - Feedback</string>
    <string name="image">Image</string>
    <string name="import_string">Import</string>
    <string name="import_string_item">Import %s</string>
    <string name="item_code">Code:</string>
    <string name="item_name">Name:</string>
    <string name="move">Move</string>
    <string name="move_copy_item">Move/Copy %s?</string>
    <string name="next_id">Next ID: %d</string>
    <string name="no">No</string>
    <string name="pdf">PDF</string>
    <string name="report">Report</string>
    <string name="report_attached">1 report attached</string>
    <string name="reports_attached">%s reports attached</string>
    <string name="save">Save</string>
    <string name="send_email">Send File&#8230;</string>
    <string name="submit">Submit</string>
    <string name="support">%s - Support</string>
    <string name="total">Total</string>
    <string name="undefined">Undefined</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="yes_as_pdf">Yes - As PDF</string>
    <string name="share">Share</string>
    <string name="pro_subscription">Smart Receipts Plus</string>
    <string name="missing_ad_suggest_removal_upsell">Tired of ads? Tap to start an ad-free trial</string>
    <string name="report_info_graphs">Graphs</string>
    <string name="report_info_receipts">Receipts</string>
    <string name="report_info_distance">Distance</string>
    <string name="report_info_generate">Generate</string>
    <string name="report_header_from">From: %s</string>
    <string name="report_header_to">To: %s</string>
    <string name="report_header_receipts_total">Receipts Total: %s</string>
    <string name="report_header_receipts_total_tax">Tax Total: %s</string>
    <string name="report_header_receipts_total_no_tax">Receipts Total (Without Tax): %s</string>
    <string name="report_header_receipts_total_with_tax">Receipts Total (With Tax): %s</string>
    <string name="report_header_distance_total">Distance Total: %s</string>
    <string name="report_header_receipts_total_reimbursable">Grand Total (Reimbursable): %s</string>
    <string name="report_header_grand_total">Grand Total: %s</string>
    <string name="report_header_cost_center">Cost Center: %s</string>
    <string name="report_header_comment">Report Comment: %s</string>
    <string name="report_pdf_generation_error">There was an error generating the report</string>
    <string name="report_pdf_error_too_many_columns_title">Too many columns</string>
    <string name="report_pdf_error_too_many_columns_message">There is not enough space to fit all the columns in the report. Please try limiting the number of columns in Settings.</string>
    <string name="report_pdf_error_too_many_columns_message_landscape">There is not enough space to fit all the columns in the report. Please try limiting the number of columns in Settings or use landscape mode.</string>
    <string name="report_pdf_error_go_to_settings">Go to settings</string>
    <string name="ocr_informational_tooltip_configure_text">[Optional] Configure Automatic Scans? Tap here.</string>
    <plurals name="ocr_informational_tooltip_limited_scans_text">
        <item quantity="one">%d Scan Remaining. Tap for more.</item>
        <item quantity="other">%d Scans Remaining. Tap for more.</item>
    </plurals>
    <string name="ocr_status_title">Performing Scan (OCR):</string>
    <string name="ocr_status_message_uploading_image">Uploading Receipt&#8230;</string>
    <string name="ocr_status_message_performing_scan">Scanning for Receipt Metadata&#8230;</string>
    <string name="ocr_status_message_fetching_results">Fetching Results&#8230;</string>
    <string name="ocr_configuration_title">Automatic Scans (OCR)</string>
    <string name="ocr_configuration_scans_remaining">OCR Scans Remaining: %d</string>
    <string name="ocr_configuration_my_account">%s</string>
    <string name="ocr_configuration_welcome">Automatic Scans (OCR):</string>
    <string name="ocr_configuration_information">Smart Receipts has integrated with Taggun to provide automatic scanning (ie OCR) services, which can extract receipt metadata like the price, tax, date, and merchant name from your photos.</string>
    <string name="ocr_configuration_information_line2">We use a combination of Google Vision and Machine Learning to quickly (often in 5 seconds or less) deliver results, which will become increasingly accurate over time. Since these services have a per-usage charge, we will charge for each receipt scan below.</string>
    <string name="ocr_is_enabled">Enable Automatic Scans (OCR)?</string>
    <string name="ocr_save_scans_to_improve_results">Allow us to save images to improve accuracy?</string>
    <string name="ocr_configuration_available_purchases">Available Purchases - Tap to Buy:</string>
    <string name="ocr_configuration_information_line3">To try OCR, all new users get 2 free scans! Please remember that OCR is an optional feature and can be disabled at any time.</string>
    <string name="category_name">Name: </string>
    <string name="category_code">Code: </string>
    <string name="category_null">&lt;Category&gt;</string>
    <string name="category_null_code">NUL</string>
    <string name="category_airfare">Airfare</string>
    <string name="category_airfare_code">AIRP</string>
    <string name="category_breakfast">Breakfast</string>
    <string name="category_breakfast_code">BRFT</string>
    <string name="category_dinner">Dinner</string>
    <string name="category_dinner_code">DINN</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_entertainment_code">ENT</string>
    <string name="category_gasoline">Gasoline</string>
    <string name="category_gasoline_code">GAS</string>
    <string name="category_gift">Gift</string>
    <string name="category_gift_code">GIFT</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_hotel_code">HTL</string>
    <string name="category_laundry">Laundry</string>
    <string name="category_laundry_code">LAUN</string>
    <string name="category_lunch">Lunch</string>
    <string name="category_lunch_code">LNCH</string>
    <string name="category_other">Other</string>
    <string name="category_other_code">MISC</string>
    <string name="category_parking_tolls">Parking/Tolls</string>
    <string name="category_parking_tolls_code">PARK</string>
    <string name="category_postage_shipping">Postage/Shipping</string>
    <string name="category_postage_shipping_code">POST</string>
    <string name="category_car_rental">Car Rental</string>
    <string name="category_car_rental_code">RCAR</string>
    <string name="category_taxi_bus">Taxi/Bus</string>
    <string name="category_taxi_bus_code">TAXI</string>
    <string name="category_telephone_fax">Telephone/Fax</string>
    <string name="category_telephone_fax_code">TELE</string>
    <string name="category_tip">Tip</string>
    <string name="category_tip_code">TIP</string>
    <string name="category_train">Train</string>
    <string name="category_train_code">TRN</string>
    <string name="category_books_periodicals">Books/Periodicals</string>
    <string name="category_books_periodicals_code">ZBKP</string>
    <string name="category_cell_phone">Cell Phone</string>
    <string name="category_cell_phone_code">ZCEL</string>
    <string name="category_dues_subscriptions">Dues/Subscriptions</string>
    <string name="category_dues_subscriptions_code">ZDUE</string>
    <string name="category_meals_justified">Meals (Justified)</string>
    <string name="category_meals_justified_code">ZMEO</string>
    <string name="category_stationery_stations">Stations</string>
    <string name="category_stationery_stations_code">ZSTS</string>
    <string name="category_training_fees">Training Fees</string>
    <string name="category_training_fees_code">ZTRN</string>
    <string name="menu_receiptimage_retake">Retake Photo</string>
    <string name="menu_receiptimage_rotate_ccw">Rotate CCW</string>
    <string name="menu_receiptimage_rotate_cw">Rotate CW</string>
    <string name="email_body_subject_5mb_warning">The following attachment is over 5MB in size and may not properly attach: %s</string>
    <string name="progress_import">Importing your files&#8230;</string>
    <string name="progress_building_reports">Building Reports…</string>
    <string name="receipt_no_data">You don\'t seem to have any receipts yet. Try tapping the "+" (plus) button to get started&#8230;</string>
    <string name="receipt_action_camera">Picture</string>
    <string name="receipt_action_text">Text-Only</string>
    <string name="receipt_action_import">Import</string>
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_FULL">Full PDF Report</string>
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_IMAGES">PDF Report - No Table</string>
    <string name="DIALOG_EMAIL_CHECKBOX_CSV">CSV File</string>
    <string name="DIALOG_EMAIL_CHECKBOX_ZIP_WITH_METADATA">ZIP - Receipt Files with Metadata</string>
    <string name="DIALOG_EMAIL_CHECKBOX_ZIP">ZIP - Receipts Files</string>
    <string name="generate_report_tooltip">Tap to configure the report layouts</string>
    <string name="receipt_attach_photo">Take a photo</string>
    <string name="receipt_attach_image">Pick a photo</string>
    <string name="receipt_attach_file">Attach file</string>
    <string name="manual_backup_title">Manual Backups:</string>
    <string name="manual_backup_description">Back up your data to keep your receipts safe! You can restore your data by importing the SmartReceipts.SMR backup file, which is generated via the "Backup" button below.</string>
    <string name="manual_backup_export">Backup</string>
    <string name="manual_backup_import">Import</string>
    <string name="auto_backup_title">Automatic Backups [BETA]:</string>
    <string name="auto_backup_wifi_only">Use Wi-Fi Only</string>
    <string name="auto_backup_warning_none">Warning: Automatic backups are not configured!\nYou may be at risk of losing your data.</string>
    <string name="auto_backup_configure">Tap to Configure</string>
    <string name="existing_backups_title">Existing Backups:</string>
    <string name="login_title">Log In with your Smart Receipts Account to start using Automatic Scans (OCR)</string>
    <string name="login_field_email_hint">Email Address</string>
    <string name="login_field_password_hint">Password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="login_button_text">Log In</string>
    <string name="login_fields_hint_email">Please enter a valid email address:</string>
</resources>