<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:padding="@dimen/padding_large">

            <ProgressBar
                android:id="@+id/progress"
                style="@style/Widget.SmartReceipts.ProgressBar.Loading"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/login_fields_title"
                style="@style/Widget.SmartReceipts.TextView.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/login_title" />

            <TextView
                android:id="@+id/login_fields_hint"
                style="@style/Widget.SmartReceipts.TextView.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_fields_title"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/login_fields_hint_email" />

            <EditText
                android:id="@+id/login_field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_fields_hint"
                android:hint="@string/login_field_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_field_email"
                android:layout_marginBottom="@dimen/margin_normal"
                android:hint="@string/login_field_password_hint"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_field_password"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    style="@style/Widget.SmartReceipts.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/login_button_text" />

                <Button
                    android:id="@+id/sign_up_button"
                    style="@style/Widget.SmartReceipts.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:text="@string/sign_up_button_text" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>