<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <TextView
        style="@style/Widget.SmartReceipts.TextView.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/manual_backup_title" />

    <TextView
        style="@style/Widget.SmartReceipts.TextView.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/manual_backup_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_tiny"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/manual_backup_export"
            style="@style/Widget.SmartReceipts.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:paddingEnd="@dimen/padding_large"
            android:paddingStart="@dimen/padding_large">

            <TextView
                style="@style/Widget.SmartReceipts.TextView.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/padding_normal"
                android:drawableStart="@drawable/ic_cloud_upload_24dp"
                android:gravity="center_vertical"
                android:textColor="@color/accent_text_primary"
                android:text="@string/manual_backup_export"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/manual_backup_import"
            style="@style/Widget.SmartReceipts.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/padding_large"
            android:paddingStart="@dimen/padding_large">

            <TextView
                style="@style/Widget.SmartReceipts.TextView.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/padding_normal"
                android:drawableStart="@drawable/ic_cloud_download_24dp"
                android:gravity="center_vertical"
                android:textColor="@color/accent_text_primary"
                android:text="@string/manual_backup_import"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <View
        style="@style/Widget.View.Divider.Horizontal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal" />

    <TextView
        style="@style/Widget.SmartReceipts.TextView.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/auto_backup_title" />

    <TextView
        android:id="@+id/auto_backup_warning"
        style="@style/Widget.SmartReceipts.TextView.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:drawablePadding="@dimen/padding_normal"
        android:drawableStart="@android:drawable/stat_sys_warning"
        android:gravity="center_vertical"
        android:text="@string/auto_backup_warning_none" />

    <CheckBox
        android:id="@+id/auto_backup_wifi_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingStart="@dimen/padding_normal"
        android:text="@string/auto_backup_wifi_only"
        android:textAppearance="@style/Widget.SmartReceipts.TextView.Body1" />

    <LinearLayout
        android:id="@+id/automatic_backup_config_button"
        style="@style/Widget.SmartReceipts.Button.Tertiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/automatic_backup_config_button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="?colorAccent"
            app:srcCompat="@drawable/ic_cloud_off_24dp" />

        <TextView
            android:id="@+id/automatic_backup_config_button_text"
            style="@style/Widget.SmartReceipts.TextView.Button.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:text="@string/auto_backup_configure"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/existing_backups_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            style="@style/Widget.View.Divider.Horizontal"
            android:layout_marginBottom="@dimen/margin_normal" />

        <TextView
            style="@style/Widget.SmartReceipts.TextView.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_backups_title" />

    </LinearLayout>

</LinearLayout>