<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.SmartReceipts.RelativeLayout.SlidingPane">

    <android.support.v7.widget.RecyclerView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/margin_tiny"
        tools:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.SmartReceipts.ProgressBar.Loading" />

    <TextView
        android:id="@+id/no_data"
        style="@style/Widget.SmartReceipts.TextView.NoData"
        android:text="@string/receipt_no_data"
        android:visibility="invisible" />

    <View
        android:id="@+id/fab_active_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fab_transparency_mask"
        android:visibility="gone" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        style="@style/Widget.SmartReceipts.FloatingActionButton.Menu"
        fab:menu_icon="@drawable/fab_add">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/receipt_action_import"
            style="@style/Widget.SmartReceipts.FloatingActionButton"
            android:src="@drawable/ic_image_white_24dp"
            fab:fab_label="@string/receipt_action_import"
            android:tint="@color/text_primary_color"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/receipt_action_text"
            style="@style/Widget.SmartReceipts.FloatingActionButton"
            android:src="@drawable/ic_receipt_white_24dp"
            fab:fab_label="@string/receipt_action_text"
            android:tint="@color/text_primary_color"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/receipt_action_camera"
            style="@style/Widget.SmartReceipts.FloatingActionButton"
            android:src="@drawable/ic_photo_camera_white_24dp"
            fab:fab_label="@string/receipt_action_camera"
            android:tint="@color/text_primary_color"/>

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>